# api-template

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  initdb.sql  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 37e6c288abe8_create_users_table.py
docs/: CHANGELOG.md  RELENG.md  index.md
src/api_template/: injector.py  logger.py  settings.py
src/api_template/adapters/api/: auth.py  jwt.py
src/api_template/adapters/db/: hash.py  user.py
src/api_template/core/: errors.py  models.py  session.py
src/api_template/ports/: hash.py  jwt.py  user.py
src/api_template/use_cases/: auth.py
static/docs/: swagger-ui-bundle.js
test/: conftest.py  test_auth.py  test_main.py
